--- a/style.css
+++ b/style.css
@@ -1,5 +1,28 @@
 #workshopImage {
-    height: 100vh;
-    width: 100vw;
-    background: url("img/wot-masthead-dark.jpg")
+    height: 70%;
+    width: 100%;
+    background: url("img/wot-masthead-dark.jpg") center center / cover no-repeat;
+}
+#logo {
+    height:2em;
+    width: 10em;
+    margin-left: 10%;
+    margin-top: 10%;
+}
+#logoContainer{
+    float: left;
+    width: 15%;
+    margin-right:20%;
+}
+#menuContainer{
+    float:left;
+    width: 50%;
+    color: white;
+    margin-top: 1%;
+    letter-spacing: 0.2em;
+}
+#menuContainer pre {
+    font-family:arial;
+    font-size: .9em;
+    font-weight: 50;
 }
